--- a/wonton/wonton.html
+++ b/wonton/wonton.html
@@ -3,38 +3,44 @@
     <head>
         <title>Wonton</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
+    <p><a href="../index.html">back to home</a></p>
     <body>
-        <h1>Wonton</h1>
-        <img src="../images/Wonton.jpg" width='250' alt="Picture of Wonton soup">
-        <h3>Wonton soup made the easy way</h3>
-        <p>The preperation for this recipe is actually very <em>quick!</em> Its the physical folding that takes up the most time.</p>
-        <h3>Ingredients</h3>
-            <ul>
-                <li>Premade wonton skin (because I'm lazy</li>
-                <li>about 1 pound of ground pork</li>
-                <li>4-5 green onions chopped very small</li>
-                <li>about a tbsp of minced garlic</li>
-                <li>Soy sauce</li>
-                <li>cooking oil</li>
-                <li>salt</li>
-                <li>sesame oil</li>
-                <li>one egg</li>
+        <div class="top">  
+            <h1>Wonton</h1>
+            <img src="../images/Wonton.jpg" width='250' alt="Picture of Wonton soup">
+            <h3>Wonton soup made the easy way</h3>
+            <p>The preperation for this recipe is actually very <em>quick!</em> Its the physical folding that takes up the most time.</p>
+        </div>   
+            <h3>Ingredients</h3>
+                <ul class="wonton">
+                    <li>Premade wonton skin (because I'm lazy</li>
+                    <li>about 1 pound of ground pork</li>
+                    <li>4-5 green onions chopped very small</li>
+                    <li>about a tbsp of minced garlic</li>
+                    <li>Soy sauce</li>
+                    <li>cooking oil</li>
+                    <li>salt</li>
+                    <li>sesame oil</li>
+                    <li>one egg</li>
 
-            </ul>
-        <h3>Steps! <em>Disclaimer I normally eye ball everything :)</em></h3>
-            <ol>
-                <li>Chop your green onions and Garlic</li>
-                <li>Put pork in a bowl and mix in about a tbsp of cooking oil of your choice</li>
-                <li>Add at least 2 tbsp of soy sauce to the pork and mix in (depends on how salty your soy sauce is</li>
-                <li>Mix in the green onions and garlic</li>
-                <li>Add in about 1 tbsp of salt</li>
-                <li>Crack 1 egg and mix in with a little bit of sesame oil</li>
-                <li>Now fold!</li>
+                </ul>
+            <h3>Steps! <em>Disclaimer I normally eye ball everything :)</em></h3>
+                <ol>
+                    <li>Chop your green onions and Garlic</li>
+                    <li>Put pork in a bowl and mix in about a tbsp of cooking oil of your choice</li>
+                    <li>Add at least 2 tbsp of soy sauce to the pork and mix in (depends on how salty your soy sauce is</li>
+                    <li>Mix in the green onions and garlic</li>
+                    <li>Add in about 1 tbsp of salt</li>
+                    <li>Crack 1 egg and mix in with a little bit of sesame oil</li>
+                    <li>Now fold!</li>
 
-            </ol>
-        <img src="../images/wontonfold.jpg" width='250' alt=Picture of wontons being folded step by step>
-            <p><a href="../index.html">back to home</a></p>
+                </ol>
+            
+            <div class="top">  
+                <img src="../images/wontonfold.jpg" width='250' alt=Picture of wontons being folded step by step>
+            </div>    
     </body>
 
 
