--- a/spam/spam.html
+++ b/spam/spam.html
@@ -3,6 +3,7 @@
     <head>
         <title>Spam Fried Rice</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Spam Fried Rice</h1>
