--- a/tofu/tofu.html
+++ b/tofu/tofu.html
@@ -3,6 +3,7 @@
     <head>
         <title>Mapo Tofu</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Mapo Tofu</h1>
